crates/laplace-macro/tests/ui/fail/byoc_async.rs
// SPDX-License-Identifier: Apache-2.0

#[laplace_macro::laplace_byoc_test(expected = "clean")]
async fn async_byoc_is_rejected() {}

fn main() {}
